i added create comment handler
